--- a/index.html
+++ b/index.html
@@ -1,4 +1,31 @@
 <!DOCTYPE HTML>
 <html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"></link>
+        <link rel="stylesheet" href="index.css" />
+    </head>
+    <body>
+        <header>
+            <nav>
+                <ul>
+                    <li>Link 1</li>
+                    <li>Link 2</li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <h1>The Official U.S. Army - Illustrated Guide to Edible Wild Plants</h1>
+            <p>Some text</p>
+            <h2>Interesting Excerpts</h2>
+            <p>Interesting fact 1</p>
+            <p>Interesting fact 2</p>
+            <h3>Testimonials</h3>
+            <p>Cub Scout Testimonial</p>
+            <p>Lost soul testimonial</p>
+
+        </main>
+
+    </body>
 
 </html>
