update HTML and CSS

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"></link>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Allerta+Stencil&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="index.css" />
     </head>
     <body>
@@ -16,6 +19,7 @@
         </header>
         <main>
             <h1>The Official U.S. Army - Illustrated Guide to Edible Wild Plants</h1>
+            <img class="Book_Cover" src="plants.JPG" alt="Plants"/>
             <p>Some text</p>
             <h2>Interesting Excerpts</h2>
             <p>Interesting fact 1</p>
