Add content and styles

--- a/index.html
+++ b/index.html
@@ -19,15 +19,24 @@
         </header>
         <main>
             <h1>The Official U.S. Army - Illustrated Guide to Edible Wild Plants</h1>
-            <img class="Book_Cover" src="plants.JPG" alt="Plants"/>
-            <p>Some text</p>
+            <img class="bookcover" src="plants.JPG" alt="Plants"/>
+            <p class="quote">In a survival situation, plants can provide food and medicine.  Their safe usage requires absolutely positive identification, knowing how to prepare them for eating, and knowing any dangerous properties they might have.  Familiarity with botanical structures of plants and information on where they grow will make them easier to locate and identify.  -U.S. Army</p>
+            <div>
             <h2>Interesting Excerpts</h2>
-            <p>Interesting fact 1</p>
-            <p>Interesting fact 2</p>
+            <div class="facts">
+            <p class="fact1">Interesting fact 1</p>
+            <p class="fact2">Interesting fact 2</p>
+            </div>
+            </div>
+            <br>
+            <img class="shroom" src="shroomgif.gif" alt="mushroom" />
+            <div>
             <h3>Testimonials</h3>
-            <p>Cub Scout Testimonial</p>
-            <p>Lost soul testimonial</p>
-
+            <div class="testimonials">
+            <p class="cub">Cub Scout Testimonial</p>
+            <p class="lost">Lost soul testimonial</p>
+            </div>
+            </div>
         </main>
 
     </body>
