Add pics and update formating for CSS

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <header>
             <nav>
                 <ul>
-                    <li>Link 1</li>
-                    <li>Link 2</li>
+                    <li> <a href="bookpage1.jpg"> Bael Fruit</a></li>
+                    <li><a href="bookpage2.jpg">Baobab</a></li>
                 </ul>
             </nav>
         </header>
@@ -24,17 +24,34 @@
             <div>
             <h2>Interesting Excerpts</h2>
             <div class="facts">
-            <p class="fact1">Interesting fact 1</p>
-            <p class="fact2">Interesting fact 2</p>
+                <ul class="fact1">To avoid potentially poisonous plants, stay away from any wild or unknown plants that have - 
+                    <li>Milky or discolored sap.</li>
+                    <li>Beans, bulbs, or seeds inside pods.</li>
+                    <li>Bitter or soapy taste.</li>
+                    <li>Spines, fine hairs, or thorns.</li>
+                    <li>Dill, carrot, parsnip, or parsley-like foliage.</li>
+                    <li>"Almond" scent in woody parts and leaves.</li>
+                    <li>Grain heads with pink, purplish, or black spurs.</li>
+                    <li>Three-leaved growth pattern.</li>
+                </ul>
+                <ul class="fact2"> Examples of testing a plant with a wait time of 8 hours between any touch or taste test:
+                    <li>Smell the plant for strong or acid odors.</li>
+                    <li>Touch test the plant on skin to check for reaction and wait.</li>
+                    <li>Touch test the plant on outer surface of lip to check for reaction and wait.</li>
+                    <li>Test on tongue and wait.</li>
+                    <li>Chew a small portion without swallowing and wait.</li>
+                    <li>Swallow small portion and wait.</li>
+                    <li>Swallow no more than 1/4 cup of the plant and wait.</li>
+                </ul>
             </div>
             </div>
             <br>
             <img class="shroom" src="shroomgif.gif" alt="mushroom" />
             <div>
-            <h3>Testimonials</h3>
+            <h3>Reviews</h3>
             <div class="testimonials">
-            <p class="cub">Cub Scout Testimonial</p>
-            <p class="lost">Lost soul testimonial</p>
+            <p class="cub">"This is very educational. It's great for any survivalist, prepper, or avid outdoorsman."  - Samuel Kostiew</p>
+            <p class="lost">"Very educational for beginners and easy to comprehend. This is a wonderful buy and my children are learning about so many new plants in our area!" - Kasey Fisher</p>
             </div>
             </div>
         </main>
