Add author, grid content

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                 <ul>
                     <li> <a href="bookpage1.jpg"> Bael Fruit</a></li>
                     <li><a href="bookpage2.jpg">Baobab</a></li>
+                    <li><a href="https://www.amazon.com/product-reviews/1493040391/ref=acr_dp_hist_5?ie=UTF8&filterByStar=five_star&reviewerType=all_reviews#reviews-filter-bar">Purchase this book!</a></li>
                 </ul>
             </nav>
         </header>
@@ -21,10 +22,15 @@
             <h1>The Official U.S. Army - Illustrated Guide to Edible Wild Plants</h1>
             <img class="bookcover" src="plants.JPG" alt="Plants"/>
             <p class="quote">In a survival situation, plants can provide food and medicine.  Their safe usage requires absolutely positive identification, knowing how to prepare them for eating, and knowing any dangerous properties they might have.  Familiarity with botanical structures of plants and information on where they grow will make them easier to locate and identify.  -U.S. Army</p>
+            <p>Author: Department of the Army (A federal agency)</p>
+            <br>
+            <hr>
             <div>
             <h2>Interesting Excerpts</h2>
             <div class="facts">
-                <ul class="fact1">To avoid potentially poisonous plants, stay away from any wild or unknown plants that have - 
+
+                <p>To avoid potentially poisonous plants, stay away from any wild or unknown plants that have -</p>
+                <ul>
                     <li>Milky or discolored sap.</li>
                     <li>Beans, bulbs, or seeds inside pods.</li>
                     <li>Bitter or soapy taste.</li>
@@ -34,7 +40,8 @@
                     <li>Grain heads with pink, purplish, or black spurs.</li>
                     <li>Three-leaved growth pattern.</li>
                 </ul>
-                <ul class="fact2"> Examples of testing a plant with a wait time of 8 hours between any touch or taste test:
+                <p>Examples of testing a plant with a wait time of 8 hours between any touch or taste test:</p>
+                <ul>
                     <li>Smell the plant for strong or acid odors.</li>
                     <li>Touch test the plant on skin to check for reaction and wait.</li>
                     <li>Touch test the plant on outer surface of lip to check for reaction and wait.</li>
