--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
     <body>
         <header>
             <nav>
-                <ul>
-                    <li> <a href="bookpage1.jpg"> Bael Fruit</a></li>
+                <ul class="toplinks">
+                    <li><a href="bookpage1.jpg"> Bael Fruit</a></li>
                     <li><a href="https://www.amazon.com/product-reviews/1493040391/ref=acr_dp_hist_5?ie=UTF8&filterByStar=five_star&reviewerType=all_reviews#reviews-filter-bar">Purchase this book!</a></li>
                     <li><a href="bookpage2.jpg">Baobab</a></li>
                 </ul>
             </nav>
         </header>
         <main>
-            <h1>The Official U.S. Army - Illustrated Guide to Edible Wild Plants</h1>
+            <h1 id="title">The Official U.S. Army - Illustrated Guide to Edible Wild Plants</h1>
             <img class="bookcover" src="plants.JPG" alt="Plants"/>
             <p class="quote">In a survival situation, plants can provide food and medicine.  Their safe usage requires absolutely positive identification, knowing how to prepare them for eating, and knowing any dangerous properties they might have.  Familiarity with botanical structures of plants and information on where they grow will make them easier to locate and identify.  -U.S. Army</p>
             <p>Author: Department of the Army (A federal agency)</p>
@@ -54,6 +54,7 @@
             </div>
             <br>
             <img class="shroom" src="shroomgif.gif" alt="mushroom" />
+            <hr>
             <div>
             <h3>Reviews</h3>
             <div class="testimonials">
