--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <title>Edible Wild Plants</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"></link>
         <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,9 +13,9 @@
         <header>
             <nav>
                 <ul class="toplinks">
-                    <li><a href="bookpage1.jpg"> Bael Fruit</a></li>
-                    <li><a href="https://www.amazon.com/product-reviews/1493040391/ref=acr_dp_hist_5?ie=UTF8&filterByStar=five_star&reviewerType=all_reviews#reviews-filter-bar">Purchase this book!</a></li>
-                    <li><a href="bookpage2.jpg">Baobab</a></li>
+                    <li><a href="https://www.amazon.com/product-reviews/1493040391/ref=acr_dp_hist_5?ie=UTF8&filterByStar=five_star&reviewerType=all_reviews#reviews-filter-bar" target="_BLANK">Purchase this book!</a></li>
+                    <li><a href="bookpage1.jpg" target="_BLANK"> Can I eat this?</a></li>
+                    <li><a href="bookpage2.jpg" target="_BLANK">Can I eat that?</a></li>
                 </ul>
             </nav>
         </header>
