--- a/index.html
+++ b/index.html
@@ -13,9 +13,14 @@
         <header>
             <nav>
                 <ul class="toplinks">
+                    <div class="thelinks">
                     <li><a href="https://www.amazon.com/product-reviews/1493040391/ref=acr_dp_hist_5?ie=UTF8&filterByStar=five_star&reviewerType=all_reviews#reviews-filter-bar" target="_BLANK">Purchase this book!</a></li>
+                    </div>
+                    <div></div>
+                    <div class="thelinks">
                     <li><a href="bookpage1.jpg" target="_BLANK"> Can I eat this?</a></li>
                     <li><a href="bookpage2.jpg" target="_BLANK">Can I eat that?</a></li>
+                    </div>
                 </ul>
             </nav>
         </header>
